Fix block are not aligned on landing

--- a/src/components/landing.sass
+++ b/src/components/landing.sass
@@ -22,6 +22,7 @@
   .sdm-landing
     &__title
       font-size: 1.5rem
+      line-height: 1.5rem
       margin: 0 0 1rem 0
 
   .sdm-layout
